--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pl-PL">
-<head>
+<HTML>
+<HEAD>
     <meta charset="utf-8">
-    <title>Osadzanie pliku JS - Twoje Nazwisko</title>
-</head>
-<body>
-    <script>
-        document.write("***************".fontcolor("#FF00FF") + "<br>");
-        document.write("*".fontcolor("#FF00FF") + "&nbsp;&nbsp;&nbsp;Łukasz".fontcolor("green") + "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF") + "<br>");
-        document.write("*".fontcolor("#FF00FF") + "&nbsp;&nbsp;&nbsp;Czeczko".fontcolor("green") + "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*".fontcolor("#FF00FF") + "<br>");
-        document.write("***************".fontcolor("#FF00FF") + "<br>");
-    </script>
-</body>
-</html>
+    <TITLE>Czeczko</TITLE>
+</HEAD>
+<BODY>
+<SCRIPT>
+    document.write("%%%%%%%%%%%%%%%%%%%".fontcolor("#00FFFF") + "<br>");
+    document.write("%".fontcolor("#00FFFF") + "&nbsp;&nbsp;&nbsp;Imię ucznia: Łukasz".fontcolor("#808000") + "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; %".fontcolor("#00FFFF") + "<br>");
+    document.write("%".fontcolor("#00FFFF") + "&nbsp;&nbsp;&nbsp;Nazwisko ucznia: Czeczko".fontcolor("#808000") + "&nbsp;&nbsp; %".fontcolor("#00FFFF") + "<br>");
+    document.write("%%%%%%%%%%%%%%%%%%%".fontcolor("#00FFFF") + "<br>");
+</SCRIPT>
+</BODY>
+</HTML>
